# musicxml-to-png

./: .gitignore  CHANGELOG.md  COLLABORATORS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: collaborator-tagging.md
.github/workflows/: publish.yml
docs/: roadmap.md
src/musicxml_to_png/: __init__.py  __main__.py  cli.py  converter.py  ensemble_detection.py  extract.py  instruments.py  models.py  visualize.py
tests/: __init__.py  test_cli.py  test_converter.py  test_ensemble_detection.py  test_instruments.py  test_integration.py  test_visualize_helpers.py
tests/fixtures/: test-bigband-1.mxl  test-fluteduet-1.mxl  test-orchestra-1.mxl  test-orchestra-2.mxl
