[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicxml-to-png"
version = "0.2.3"
description = "Convert MusicXML files into clean, analyzable PNG visualizations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rob Mosher"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "musicxml",
    "music",
    "visualization",
    "png",
    "notation",
    "orchestration",
    "music-analysis",
    "ai",
]
dependencies = [
    "music21>=9.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/rob-mosher/musicxml-to-png"
Repository = "https://github.com/rob-mosher/musicxml-to-png"
Issues = "https://github.com/rob-mosher/musicxml-to-png/issues"

[project.scripts]
musicxml-to-png = "musicxml_to_png.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["musicxml_to_png*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

